--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "standard": "^17.0.0"
   },
   "engines": {
     "node": "14.x"
